crates/rpkl-runtime/tests/snapshots/snapshot_tests__list_repeat.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 1746
expression: eval_pkl(source)
---
{
  "items": [
    1,
    2
  ],
  "repeated": [
    1,
    2,
    1,
    2,
    1,
    2
  ]
}
