crates/rpkl-runtime/tests/snapshots/snapshot_tests__list_single_or_null.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": 42,
  "r2": null,
  "r3": null
}
