crates/rpkl-runtime/tests/snapshots/snapshot_tests__list_sort.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 1599
expression: eval_pkl(source)
---
{
  "nums": [
    3,
    1,
    4,
    1,
    5
  ],
  "sorted": [
    1,
    1,
    3,
    4,
    5
  ]
}
