crates/rpkl-runtime/tests/snapshots/snapshot_tests__list_sort_with.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": [],
  "r2": [
    1,
    2,
    3,
    4,
    5
  ],
  "r3": [
    5,
    4,
    3,
    2,
    1
  ]
}
