crates/rpkl-runtime/tests/snapshots/snapshot_tests__list_split.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 1755
expression: eval_pkl_result(source)
---
{
  "items": [
    1,
    2,
    3,
    4,
    5
  ],
  "result": [
    [
      1,
      2,
      3
    ],
    [
      4,
      5
    ]
  ]
}
